# project-template-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.BSD.txt  LICENSE.MIT.txt  LICENSE.txt  README.md  pyproject.toml
scripts/: gpu_detect.py
