[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "python-project-template"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
license = "BSD-3-Clause OR Apache-2.0 OR MIT"
license-files = ["LICEN[CS]E*"]
authors = [{name = "Jeff Solas", email = "jeffamsolas@gmail.com"}]
maintainers = [{name = "Jeff Solas", email = "jeffamsolas@gmail.com"}]
requires-python = "==3.11"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64","linux-64"]

[tool.pixi.dependencies]
python-dotenv = ">=1.2.1,<2"
ipykernel = ">=7.1.0,<8"
tqdm = ">=4.67.1,<5"
regex = ">=2025.11.3,<2026"

[tool.pixi.feature.dev.dependencies]
pre-commit = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-simplify = "*"

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "==12.6"
pytorch-gpu = "*"

[tool.pixi.feature.data.dependencies]
pandas = "*"
polars = "*"
matplotlib = "*"
seaborn = "*"
lux = "*"

[tool.pixi.feature.mlwin.dependencies]
scikit-learn = "*"

[tool.pixi.feature.ml]
platforms = ["linux-64"]

[tool.pixi.feature.ml.dependencies]
scikit-learn = "*"
tensorflow = "*"
jax = "*"
keras = "*"

[tool.pixi.feature.web.dependencies]
requests = "*"
feedparser = "*"
beautifulsoup4 = "*"
html2text = "*"

[tool.pixi.environments]
windows = { features = ["dev","gpu","data","mlwin"], solve-group = "windows" }
linux = { features = ["dev","gpu","data","ml"], solve-group = "linux" }
default = { features = ["dev","data","web"], solve-group = "default" }

[tool.pixi.tasks]
